--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -62,6 +62,10 @@ button {
   width: 1200px;
 }
 
+.hide__btn {
+  display: none;
+}
+
 table, td, th{
   font-size: 1.2rem;
   border: 1px solid #000;
